Revamp unit test handling (#280)
- Introduce `globalCiUnitTest` lifecycle task for convenience
- Remove unit test plugin, make it just a part of standard project
configuration. Long overdue!
- Clean up and consolidate `Test` task configurations.
- Configure `Test` tasks the same both locally and on CI. I suspect this
is part of what was negatively affecting caching for these tasks. A
bunch was left over from past work around memory issues, and I've
batched those together behind the existing verbose logging flag for
whenever we need to investigate those.

<!--
  ⬆ Put your description above this! ⬆

  Please be descriptive and detailed.
  
Please read our [Contributing
Guidelines](https://github.com/tinyspeck/slack-gradle-plugin/blob/main/.github/CONTRIBUTING.md)
and [Code of Conduct](https://slackhq.github.io/code-of-conduct).

Don't worry about deleting this, it's not visible in the PR!
-->